@@ -1,3 +1,7 @@
+2009-08-11  Andrew Haley  <aph@redhat.com>
+
+	* gcc.target/arm/synchronize.c: New file.
+
 2009-08-12  Sebastian Pop  <sebastian.pop@amd.com>
 
 	PR middle-end/40980
